Finish Full-stack Javascript with React.JS(3)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,8 @@
   <script src="main.js"></script>
 </head>
 <body>
-  <h2>Hello Express and EJS -- <%= answer %></h2>
+  <div id="root"><%- initialContent -%></div>
+
+  <script src="bundle.js" charset="utf-8"></script>
 </body>
 </html>
