Complete Working with an Asynchronous API (4)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,11 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Advanced React Application Example</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+  <!-- <script src="main.js"></script> -->
+  <script type="text/javascript">
+    window.initialData = <%- JSON.stringify(initialData) -%>
+  </script>
 </head>
 <body>
-  <div id="root"><%- initialContent -%></div>
+  <div id="root"><%- initialMarkup -%></div>
 
   <script src="bundle.js" charset="utf-8"></script>
 </body>
